--- a/PennyEngine.vcxproj
+++ b/PennyEngine.vcxproj
@@ -134,6 +134,8 @@
     <ClCompile Include="PennyEngine\core\Util.cpp" />
     <ClCompile Include="PennyEngine\input\Gamepad\Gamepad.cpp" />
     <ClCompile Include="PennyEngine\input\InputEventDistributor.cpp" />
+    <ClCompile Include="PennyEngine\ui\UI.cpp" />
+    <ClCompile Include="PennyEngine\ui\UIManager.cpp" />
     <ClCompile Include="soloud\audiosource\monotone\soloud_monotone.cpp" />
     <ClCompile Include="soloud\audiosource\noise\soloud_noise.cpp" />
     <ClCompile Include="soloud\audiosource\openmpt\soloud_openmpt.cpp" />
@@ -222,6 +224,8 @@
     <ClInclude Include="PennyEngine\input\KeyListener.h" />
     <ClInclude Include="PennyEngine\input\MouseListener.h" />
     <ClInclude Include="PennyEngine\PennyEngine.h" />
+    <ClInclude Include="PennyEngine\ui\UI.h" />
+    <ClInclude Include="PennyEngine\ui\UIManager.h" />
     <ClInclude Include="soloud\audiosource\speech\darray.h" />
     <ClInclude Include="soloud\audiosource\speech\klatt.h" />
     <ClInclude Include="soloud\audiosource\speech\resonator.h" />
