--- a/PennyEngine.vcxproj
+++ b/PennyEngine.vcxproj
@@ -132,8 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PennyEngine\core\Util.cpp" />
-    <ClCompile Include="PennyEngine\input\Gamepad\Gamepad.cpp" />
+    <ClCompile Include="PennyEngine\input\gamepad\Gamepad.cpp" />
     <ClCompile Include="PennyEngine\input\InputEventDistributor.cpp" />
+    <ClCompile Include="PennyEngine\ui\components\MenuComponent.cpp" />
+    <ClCompile Include="PennyEngine\ui\Menu.cpp" />
     <ClCompile Include="PennyEngine\ui\UI.cpp" />
     <ClCompile Include="PennyEngine\ui\UIManager.cpp" />
     <ClCompile Include="soloud\audiosource\monotone\soloud_monotone.cpp" />
@@ -211,19 +213,22 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PennyEngine\audio\SoundManager.h" />
+    <ClInclude Include="PennyEngine\core\Defines.h" />
     <ClInclude Include="PennyEngine\core\EngineInstance.h" />
     <ClInclude Include="PennyEngine\core\GameManager.h" />
     <ClInclude Include="PennyEngine\core\Logger.h" />
     <ClInclude Include="PennyEngine\core\Resolution.h" />
     <ClInclude Include="PennyEngine\core\Util.h" />
-    <ClInclude Include="PennyEngine\input\Gamepad\Gamepad.h" />
-    <ClInclude Include="PennyEngine\input\Gamepad\GamepadButtons.h" />
-    <ClInclude Include="PennyEngine\input\Gamepad\GamepadListener.h" />
+    <ClInclude Include="PennyEngine\input\gamepad\Gamepad.h" />
+    <ClInclude Include="PennyEngine\input\gamepad\GamepadButtons.h" />
+    <ClInclude Include="PennyEngine\input\gamepad\GamepadListener.h" />
     <ClInclude Include="PennyEngine\input\InputEventDistributor.h" />
     <ClInclude Include="PennyEngine\input\InputListener.h" />
     <ClInclude Include="PennyEngine\input\KeyListener.h" />
     <ClInclude Include="PennyEngine\input\MouseListener.h" />
     <ClInclude Include="PennyEngine\PennyEngine.h" />
+    <ClInclude Include="PennyEngine\ui\components\MenuComponent.h" />
+    <ClInclude Include="PennyEngine\ui\Menu.h" />
     <ClInclude Include="PennyEngine\ui\UI.h" />
     <ClInclude Include="PennyEngine\ui\UIManager.h" />
     <ClInclude Include="soloud\audiosource\speech\darray.h" />
@@ -239,6 +244,7 @@
     <ClInclude Include="testing\TestGameManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="soloud\audiosource\speech\Elements.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
