--- a/PennyEngine.vcxproj.filters
+++ b/PennyEngine.vcxproj.filters
@@ -344,6 +344,9 @@
     <ClInclude Include="PennyEngine\core\Defines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PennyEngine\ui\components\ComponentAppearanceConfig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="soloud\audiosource\speech\Elements.def">
