--- a/PennyEngine.vcxproj
+++ b/PennyEngine.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="PennyEngine\input\InputEventDistributor.cpp" />
     <ClCompile Include="PennyEngine\ui\components\Button.cpp" />
     <ClCompile Include="PennyEngine\ui\components\MenuComponent.cpp" />
+    <ClCompile Include="PennyEngine\ui\components\Panel.cpp" />
     <ClCompile Include="PennyEngine\ui\Menu.cpp" />
     <ClCompile Include="PennyEngine\ui\UI.cpp" />
     <ClCompile Include="PennyEngine\ui\UIManager.cpp" />
@@ -233,6 +234,7 @@
     <ClInclude Include="PennyEngine\ui\components\ButtonListener.h" />
     <ClInclude Include="PennyEngine\ui\components\ComponentAppearanceConfig.h" />
     <ClInclude Include="PennyEngine\ui\components\MenuComponent.h" />
+    <ClInclude Include="PennyEngine\ui\components\Panel.h" />
     <ClInclude Include="PennyEngine\ui\Menu.h" />
     <ClInclude Include="PennyEngine\ui\UI.h" />
     <ClInclude Include="PennyEngine\ui\UIManager.h" />
