--- a/PennyEngine.vcxproj
+++ b/PennyEngine.vcxproj
@@ -256,6 +256,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+    <None Include="PennyEngine.licenseheader" />
     <None Include="soloud\audiosource\speech\Elements.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
