Fix mouse priority for buttons, fix slider appearance when not autocentered, make step rate for sliders customizable for gamepads, add SliderListener for slider callbacks

--- a/PennyEngine.vcxproj.filters
+++ b/PennyEngine.vcxproj.filters
@@ -377,6 +377,9 @@
     <ClInclude Include="PennyEngine\ui\components\Slider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PennyEngine\ui\components\SliderListener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="soloud\audiosource\speech\Elements.def">
