--- a/PennyEngine.vcxproj
+++ b/PennyEngine.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="PennyEngine\ui\components\Panel.h" />
     <ClInclude Include="PennyEngine\ui\components\Slider.h" />
     <ClInclude Include="PennyEngine\ui\components\SliderHandle.h" />
+    <ClInclude Include="PennyEngine\ui\components\SliderListener.h" />
     <ClInclude Include="PennyEngine\ui\Menu.h" />
     <ClInclude Include="PennyEngine\ui\UI.h" />
     <ClInclude Include="PennyEngine\ui\UIManager.h" />
